--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
   },
   "dependencies": {
+    "@rails/activestorage": "^7.0.7",
     "react-icons": "^4.10.1"
   }
 }
